tests/rosetta/out/Swift/arrays.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:55:05Z
func listStr(_ xs: [Int]) -> String {
    var s = "["
    var i = 0
    while i < xs.count {
        s = s + String(xs[i])
        if i + 1 < xs.count {
            s = s + " "
        }
        i = i + 1
    }
    s = s + "]"
    return s
}
var a = [0, 0, 0, 0, 0]
print("len(a) = " + String(a.count))
print("a = " + listStr(a))
a[0] = 3
print("a = " + listStr(a))
print("a[0] = " + String(a[0]))
var s = Array(a[0..<4])
var cap_s = 5
print("s = " + listStr(s))
print("len(s) = " + String(s.count) + "  cap(s) = " + String(cap_s))
s = Array(a[0..<5])
print("s = " + listStr(s))
a[0] = 22
s[0] = 22
print("a = " + listStr(a))
print("s = " + listStr(s))
s = s + [4]
s = s + [5]
s = s + [6]
cap_s = 10
print("s = " + listStr(s))
print("len(s) = " + String(s.count) + "  cap(s) = " + String(cap_s))
a[4] = -1
print("a = " + listStr(a))
print("s = " + listStr(s))
s = [Any]()
for i in 0..<8 {
    s = s + [0]
}
cap_s = 8
print("s = " + listStr(s))
print("len(s) = " + String(s.count) + "  cap(s) = " + String(cap_s))
